css/color-scheme.css
html {
    scroll-behavior: smooth;
}

html, body {
    height: 100%;
}

body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 0;
}

/* utility classes*/

.uppercase { text-transform: uppercase;}
.cover-viewport { height: 100vh; width: 100%;}
.txt-decor-none {text-decoration: none;}
.list-style-none { list-style: none; padding: 0; margin: 0;}
.list-inline { display: flex; gap: var(--list-gap, 2rem);}
.margin-0 {margin:0;}
.flex { display: flex; gap: var(--gap, 1rem);}
.grid { display: grid; gap: var(--gap, 1rem);}

/* theme toggle button */

#theme-toggle-button {
    position: fixed;
    top: 0;
    right: 0;
    height: 2.5rem;
    width: 2.5rem;
    background-color: transparent;
    border-color: transparent;
    background-repeat: no-repeat;
    margin-inline-end: 1rem;
    margin-block-start: 1rem;
}

/* welcome screen */

.fixed-bg {
    background-image: url(/media/images/website-builder.svg);
    background-color: var(--bg-color);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
}

.fixed-bg h1 {
    font-size: 3rem;
    margin-block-end: 0;
}

.welcome-screen-arrow {
    margin-block-start: 5rem;
    margin-block-end: 5rem;
}

.welcome-screen-div {
    background: linear-gradient(to bottom, transparent, var(--gradient-color) 100%);
    flex-flow: column nowrap;
    justify-content: end;
    text-align: center;
    --gap: 0;
}

.welcome-screen-div>* {
    margin-inline-start: 1rem;
    margin-inline-end: 1rem;
    font-size: 110%;
}

/* header */

.header-base img {
    display: block;
    max-width: 500px;
    width: 100%;
    margin: auto;
}

.header-base {
    text-align: center;
    font-size: 3.5rem;
}

/* navigation */

.primary-nav-logo {
    margin-block-start: 1.5rem;
    margin-inline-start: 2rem;
    margin-inline-end: 2rem;
    margin-block-end: 1.5rem;
    --gap: 0.2rem;
    align-items: center;
    justify-content: left;
}

.nav-base {
    background: var(--primary-base);
    flex-wrap: nowrap;
    justify-content: space-between;
    width: 100%;
    color:var(--text-color);
    margin-block-end: 2rem;
}

.nav-base ul {
    align-items: center;
    margin-block-end: 0;
    margin-block-start: 0;
    margin-inline-end: 3rem;
    --gap: 3rem;
}

.nav-base a {
    color: var(--text-color);
    text-decoration: none;
    font-weight: 400;
}

.nav-base a:hover:not(.link-active, .txt-decor-none) {
    text-decoration: underline;
}

.nav-base .link-active {
    font-weight: bold;
}

/* containers */

.container-base {
    max-width: min(90vw, var(--max-spc-width, 960px));
}

.container-center {
    max-width: min(90vw, var(--max-spc-width, 960px));
    margin: auto;
}

/* sections */

.section-base {
    padding-block-start: 1rem;
    padding-inline-start: 1rem;
    padding-inline-end: 1rem;
    padding-block-end: 1rem;
}

.section-offwhite {
    background-color: var(--section-offwhite-color);
    padding-block-start: 1rem;
    padding-inline-start: 1.2rem;
    padding-inline-end: 1.2rem;
    padding-block-end: 1rem;
}

/* footer */

.footer-base {
    position: sticky;
    top: 100vh;
    background-color: var(--primary-base);
    flex-direction: column;
    align-items: center;
    --gap: 1.5rem;
    color: var(--white-base);
    padding-block-start: 2rem;
    padding-block-end: 0.75rem;
    margin-block-start: 2rem;
}

.footer-heading {
    font-size: 1.5rem;
    font-weight: bold;
}

.footer-base a {
    text-decoration: none;
    color: var(--text-color);
    font-weight: 400;
    --gap: 3rem;
}

.footer-social-links {
    --gap: 4rem;
}

/* blogs */

.blog-list {
    --gap: 1.5rem;
    list-style: none;
    margin-block-end: 1rem;
}

@media (min-width:960px) {
    .blog-list {
        grid-template-columns: repeat(3, 1fr);
    }

    .blog-margin-internal {
        margin-block-start: 2rem;
        margin-inline-start: 3rem;
        margin-inline-end: 3rem;
        margin-block-end: 2rem;
    }

    .project-container.read-mode {
        padding-block-end: 3rem;
        padding-inline-start: 2rem;
    }
}

@media (min-width:640px) and (max-width:960px) {
    .blog-list {
        grid-template-columns: repeat(2, 1fr);
    }

    .blog-margin-internal {
        margin-block-start: 2rem;
        margin-inline-start: 2rem;
        margin-inline-end: 2rem;
        margin-block-end: 2rem;
    }

    .project-container.read-mode {
        padding-block-end: 3rem;
        padding-inline-start: 1rem;
    }
}

.blog-container:not(.read-mode) {
    height: 100%;
    width: 100%;
    --gap: 0;
    flex-direction: column;
    justify-content: space-between;
}

.blog-container.read-mode {
    height: 100%;
    width: 100%;
    flex-direction: column-reverse;
    justify-content: space-between;
    align-items: center;
}

.blog-card {
    border: solid 1px;
    border-color: var(--grey-fade);
    --max-spc-width: 100%;
    transition: 90ms ease-out;
    overflow-x: hidden;
    overflow-y: hidden;
    overflow-wrap: break-word;
    color: var(--blog-card-text-color);
}

.blog-card-hr {
    color: var(--hr-color);
}

.blog-card-heading:not(.read-mode) {
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;  
    overflow: hidden;
    margin: 0;
    font-size: 1.4rem;
}

.blog-card-para {
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;  
    overflow: hidden;
}

.blog-card-text {
    margin-block-start: 0.6rem;
    margin-inline-start: 0.8rem;
    margin-inline-end: 0.8rem;
    margin-block-end: 0rem;
    flex-direction: column;
    --gap: 0rem;
    justify-content: space-between;
    height: 50%;
}

.blog-card-cover:not(.read-mode) {
    height: 300px;
    width: 100%;
}

.blog-card-cover.read-mode {
    width: 70%;
    margin-block-end: 2rem;
}

.blog-card-cover img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.blog-card:not(.nohover):hover {
    transition: 150ms ease-in;
    transform: scale(1.05);
}

.author-info {
    justify-content: space-between;
}

.blog-stat:not(.read-mode) {
    --gap: 0.7rem;
}

.blog-stat.read-mode {
    --gap: 0.7rem;
    justify-content: space-between;
    align-items: center;
}

.more-blogs {
    text-decoration: none;
    color: var(--blog-card-text-color);
}

.more-blogs>div {
    justify-content: center;
    align-items: center;
}

/* typography */

.typography-base {
    text-align: center;
    flex-direction: column;
    --gap: 0;
}

/* aside */

.aside-base {
    color: var(--aside-text-color);
    font-style: italic;
    font-size: 1rem;
}

/* links */

.primary-link {
    background-color: var(--primary-link-color);
    border: 0.2rem solid var(--primary-link-color);
    padding-block-start: 0.6rem;
    padding-inline-start: 1rem;
    padding-inline-end: 1rem;
    padding-block-end: 0.6rem;
    font-size: 1.1rem;
    color: var(--text-color);
    text-decoration: none;
    font-weight: 400;
}

.primary-link:hover {
    background-color: var(--secondary-base);
    border-color: var(--secondary-base);
}

.secondary-link {
    background-color: var(--bg-color);
    border: 0.2rem solid var(--primary-link-color);
    padding-block-start: 0.6rem;
    padding-inline-start: 1rem;
    padding-inline-end: 1rem;
    padding-block-end: 0.6rem;
    font-size: 1.1rem;
    font-weight: 500;
    color: var(--secondary-link-text-color);
    text-decoration: none;
}

.secondary-link:hover {
    background-color: var(--primary-hover);
}

.primary-link + .secondary-link {
    margin-inline-start: 1rem;
}

.link-near-border {
    margin-block-end: 2rem;
}

/* buttons */

.primary-button {
    background-color: var(--primary-link-color);
    border: 0.2rem solid var(--primary-link-color);
    padding-block-start: 0.6rem;
    padding-inline-start: 1rem;
    padding-inline-end: 1rem;
    padding-block-end: 0.6rem;
    font-size: 1.1rem;
    color: var(--text-color);
    font-weight: 400;
    display: inline-flex;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
    line-height: 25px;
    cursor: pointer;
}

.primary-button img {
    width: 25px;
}

.primary-button:hover {
    background-color: var(--secondary-base);
    border-color: var(--secondary-base);
}

button + button {
    margin-inline-start: 1rem;
}

/* code */

.code-base {
    --max-spc-width: 600px;
    margin-inline-start: 0;
}

.code-base>figcaption {
    font-size: 9px;
    padding-block-start: 1rem;
    padding-inline-start: 1.2rem;
    padding-inline-end: 1.2rem;
    padding-block-end: 0;
}

/* projects */

.project-container.read-mode {
    padding-block-end: 3rem;
}

.project-container>p {
    padding-block-end: 1rem;
}

